# quiz-app

./: README.md  app.py  justfile  main.py  pyproject.toml  questions.json  style.css
questions/: acid_questions.json  analytical_workloads.json  azure_tools_questions.json  blob_storage_types.json  default_questions.json  general_data_questions.json  hard_questions.json  kubas_questions.json  kubas_questions_1.json  kubas_questions_2.json  kubas_questions_3.json  kubas_questions_4.json
